fixed scrollbar fr this time

--- a/static/src/markdown.css
+++ b/static/src/markdown.css
@@ -763,8 +763,28 @@ color: #e6edf3;
     background: transparent;
     border: 0;
     overflow-x: auto;
-    scrollbar-width: thin;
 }
+
+.markdown-body pre code {
+  --sb-track-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
+  --sb-thumb-color: rgb(82 82 91 / var(--tw-bg-opacity, 1));
+  --sb-size: 4px;
+}
+
+.markdown-body pre code::-webkit-scrollbar {
+  height: 4px;
+}
+
+.markdown-body pre code::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 0px;
+}
+
+.markdown-body pre code::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 0px;
+}
+
 
 
 .markdown-body .highlight {
